# wikidata-gis-convert

./: README.md  Wikidata GIS Reconciliation.ipynb  pyproject.toml
