[tool.poetry]
name = "Wikidata GIS Convert"
version = "0.1.0"
description = ""
authors = ["David Palmer <dave@cloventt.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9,<3.12"
jupyterlab = "3.6.6"
ipyleaflet = "^0.19.0"
python-polylabel = "^0.6"
requests = "^2.32.3"
overpass = "0.7.2"
jinja2 = "^3.1.6"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false
